# distil-vibevoice-asr

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: data.yaml  distill_stage1_4b.yaml  distill_stage2_1p5b.yaml  eval_gates.yaml  prune_1p5b.yaml  prune_1p5b_real.yaml  prune_4b.yaml  qat_export.yaml
docs/: DATA_PLAN.md  DEPRECATED_VIBEVOICE_DISTILLATION.md  HARNESSES.md  LONG_MEETING_EVAL.md  MOBILE_BENCHMARK.md  REGRESSION_CHECKLIST.md  STATUS.md  integration-note-2026-07-23.md
scripts/: 00_extract_backbone.py  01_download_data.py  01b_collect_ivod.py  02_generate_scripts.py  03_synth_tts_meetings.py  03b_build_simulated.py  04_pseudo_label.py  04b_cache_latents.py  05_build_manifests.py  06_prune_4b.py  06b_prune_smoke.py  07_distill_4b.py  07b_distill_smoke.py  07c_textdistill_real.py  07d_stage1_audio_distill.py  07e_latent_distill.py  08_prune_1p5b.py  09_distill_1p5b.py  09b_audio_distill_smoke.py  10_qat_export.py  10b_export_benchmark.py  11_evaluate.py  11b_eval_long_meeting.py  11c_eval_synthetic.py  11d_ecapa_revalidate.py  11e_pool_test.py  11f_linking_experiment.py  20_stream_label_cache.py  21_chain_train.sh  22_eval_student.py  23_grow_corpus.sh  24_bulk_tts.py  25_augment_cache.py  26_eval_moss.py  27_ft_moss.py  28_chain_moss_ft.sh  30_export_moss_onnx.py  31_export_moss_qwen3style.py  32_eval_summary.py  33_eval_title.py  (+53 more)
space/: README.md  app.py  requirements.txt
space_local/: README.md  app.js  coi-sw.js  index.html  infer-worker.js  itn.js  pipeline.js
space_static/: README.md  index.html
tests/: conftest.py  test_audio_encode.py  test_augment.py  test_chunked_inference.py  test_chunked_multihour.py  test_collator.py  test_configs.py  test_consistency.py  (+22 more)
(+57 files in other folders)
