[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distil-vibevoice-asr"
version = "0.1.0"
description = "Prune-and-distill VibeVoice-ASR (8.7B -> 4B -> 1.5B) for on-device zh-TW/en meeting transcription with diarization and timestamps"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Luigi", email = "luigi.plurital@gmail.com" }]
keywords = ["asr", "distillation", "pruning", "diarization", "zh-TW", "code-switching", "on-device"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
# NOTE: torch is intentionally NOT listed — we rely on the system-provided
# CUDA 12.8 build already installed in .venv (torch 2.10.0+cu128).
dependencies = [
    "transformers>=4.48",
    "datasets",
    "accelerate",
    "soundfile",
    "numpy",
    "scipy",
    "pyyaml",
    "opencc",
    "tqdm",
    "rich",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
train = ["bitsandbytes", "tensorboard"]
audio = ["librosa"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
distil_vibevoice = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
